opam-version: "2.0"
name: "ocaml-system"
synopsis: "The OCaml compiler (system version, from outside of opam)"
maintainer: "platform@lists.ocaml.org"
depends: [
  "ocaml" {post}
  "base-unix" {post}
  "base-threads" {post}
  "base-bigarray" {post}
]
conflict-class: "ocaml-core-compiler"
available: sys-ocaml-version = version
flags: compiler
build: ["ocaml" "gen_ocaml_config.ml"]
substs: "gen_ocaml_config.ml"
authors: "Louis Gesbert, OCamlPro"
homepage: "https://github.com/AltGr/ocaml-system"
bug-reports: "https://github.com/AltGr/ocaml-system/issues"
dev-repo: "git+https://github.com/AltGr/ocaml-system"
